monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0811/A0811.java
/* (c) https://github.com/MontiCore/monticore */
public void meth1() throws A {}
